Review and merge; Enum now used for fetch types